[VAS-1195] done